[package]
name = "aleo-wasm-verify-web"
version = "0.1.0"
edition = "2021"
authors = ["Isaac H <gpg@reheatedcake.io>"]
description = "Aleo signature verification library for the WebAssembly target."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
snarkvm-console = { version = "1.0.0", features = ["wasm"] }
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
